fixed name issues
